--- a/index.html
+++ b/index.html
@@ -24,6 +24,9 @@
 			<button class="btn-filtrer">Filtrer les pièces non abordables</button>
 			<br>
 			<button class="btn-description">Filtrer les pièces avec une description</button>
+			<br>
+			<p>Prix maximum:</p>
+			<input type="range" name="prix-max" id="prix-max" min="0" max="60" step="5" value="0">
 		</section>
 
 		<!-- Fiches produits -->
