--- a/index.html
+++ b/index.html
@@ -41,6 +41,10 @@
 				<input type="number" name="nbEtoiles" min="0" max="5"><br>
 				<button>Envoyer</button>
 			</form>
+
+			<!-- Bouton mettre à jour les pièces-->
+			<h3>Données</h3>
+			<button class="btn-maj">Mettre à jour les pièces</button>
 		</section>
 
 		<!-- Fiches produits -->
