Ajout d'un deuxième graphique dans la section filtre pour compter les commentaires des pièces dispo et indispo

--- a/index.html
+++ b/index.html
@@ -50,6 +50,9 @@
 			<!-- Graphique notes-->
 			<h3>Aperçu des avis</h3>
 			<canvas id="graphique-avis" width="300" height="300"></canvas>
+			<!-- Graphique commentaires-->
+			<h3>Statistiques commentaires</h3>
+			<canvas id="graphique-dispo" width="300" height="300"></canvas>
 		</section>
 
 		<!-- Fiches produits -->
